<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <LinearLayout
        android:background="@drawable/dialog_background"
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/about"
            android:textColor="@android:color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/my_name_is_lokesh_kumar_tathari_and_this_application_is_developed_by_me_as_part_of_ica"
            android:textColor="#CFCFCF"
            android:textAlignment="center"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:layout_marginStart="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/if_you_have_any_problem_regarding_this_application_then_you_must_contact_via_email"
            android:textColor="#CFCFCF"
            android:textAlignment="center"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:layout_marginStart="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        
        <View
            android:background="@android:color/white"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"/>

        <TextView
            android:text="@string/email_id"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/white"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/w9546964_tees_ac_uk"
            android:textColor="@android:color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</RelativeLayout>